# kmdo

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: selftest.yml
docs/: Makefile  requirements.txt
docs/src/: conf.py  index.rst  kmdo-examples.cmd  kmdo-examples.out
docs/src/examples/: kmdo.cmd  kmdo.out  kmdo.uone.out
src/kmdo/: __init__.py  cli.py
tests/: test_cli.py
