[bdist_wheel]
universal = 1

[metadata]
name = kmdo
version = attr: kmdo.__version__
author = Simon A. F. Lund
author_email = os@safl.dk
maintainer = Simon A. F. Lund
maintainer_email = os@safl.dk
description = Command-line tool for auto generating command output
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
url = https://github.com/safl/kmdo
project_urls=
  homepage = https://kmdo.readthedocs.io
  documentation = https://kmdo.readthedocs.io
  repository = https://github.com/safl/kmdo

classifiers =
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Topic :: Software Development
  Topic :: Text Processing
  Topic :: Utilities

[options]
requires_python = >=3.8
setup_requires =
  wheel
  twine

zip_safe = False
packages = find:
package_dir =
  = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  kmdo = kmdo.cli:main
